etomic_website/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Play', sans-serif;
    color: #333;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.main-header {
    color: #fff;
    text-align: center;
    position: relative;
    object-fit: fill;
}

.navbar {
    --navbar-bg-color: rgb(255, 255, 255);
    --navbar-text-color: rgba(0, 0, 0, 0.8);
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center; 
    width: 100%;
    height: 60px;
    padding: 1rem;
    background-color: var(--navbar-bg-color);
    color: var(--navbar-text-color);
    /* backdrop-filter: blur(46px); */
    transition: all 0.1s ease-in-out;
    z-index: 999;
}

.navbar.hidden {
    opacity: 0;
    transform: translateY(-100%);
}

.navbar.transparent {
    --navbar-bg-color: transparent;
    --navbar-text-color: white;
}

.nav-logo-container {
    position: absolute; /* Positions the logo in the center */
    left: 50%; /* Horizontally centers the logo */
    transform: translateX(-50%); /* Adjusts for the logo's width to center it perfectly */
    display: flex;
    align-items: center;
    /* margin-left: auto; */
}

.nav-logo {
    width: 50px;
    height: auto;
    filter: invert(100%) brightness(0.2);
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 1.5rem;
    float: right;
    /* margin-left: auto; */
}

.nav-links a {
    color: inherit;
    background-color: inherit;
    text-decoration: none;
    font-weight: bold;
    padding: 0.5rem;
    position: relative;
}

.nav-links a::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 3px;
    background-color: var(--navbar-text-color);
    transform: scaleX(0);
    transform-origin: left;
    transition: all 0.1s ease;
}

.nav-links a:hover::after {
    transform: scaleX(1);
}

.logo-container {
    position: absolute;
    top: 0;
    left: 0;
    padding: 1rem;
    z-index: 99;
    display: flex;
    align-items: center; /* Vertically aligns items to the middle */
}

.logo {
    width: 150px;
    height: auto;
    filter: invert(100%);
}

.logo-name {
    margin-left: 0.5rem;
    font-size: 5.5rem;
    font-weight: bold;
    color: rgb(200, 255, 0);
}

.video-background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
    filter: brightness(0.5);
}

.bg-video {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.bg-logo-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    mix-blend-mode: difference;
    z-index: -1;
    filter: brightness(0.5);
}

.bg-logo {
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: invert(100%);
}

.hero {
    position: relative;
    height: 100vh;
    overflow: hidden;
}

.hero-content {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    transform: translate(-50%, -50%);
    padding: 4rem 2rem;
    text-align: center;
    color: white;
    z-index: 1;
}

.hero h1 {
    font-size: 10vw;
    margin-bottom: 1rem;
}

.hero p {
    font-size: 1.25rem;
    margin-bottom: 1.5rem;
}

.cta-button {
    display: inline-block;
    background-color: #0000FF;
    color: white;
    padding: 0.75rem 1.5rem;
    text-decoration: none;
    transition: filter 0.5s ease
}

.cta-button:hover {
    filter: brightness(1.2);
}

main {
    flex: 1;
    /* This allows the main content to grow and push the footer down */
    padding: 2rem;
    background-color: #f9f9f9;
    /* Light background for main content */
}

.services {
    padding: 2rem;
    background-color: #f9f9f9;
}

.services h2 {
    text-align: center;
    margin-bottom: 2rem;
    font-size: 2rem;
    color: #333;
}

.services-grid {
    display: grid;
    gap: 2rem;
    /* Space between the grid items */
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    /* Responsive columns */
    padding: 0 2rem;
}

.service-card {
    background-color: white;
    padding: 1.5rem;
    border-radius: 8px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    text-align: center;
    transition: transform 0.3s, box-shadow 0.3s;
}

.service-card h3 {
    margin-bottom: 1rem;
    font-size: 1.5rem;
    color: #003366;
}

.service-card p {
    font-size: 1rem;
    color: #666;
}

.service-card:hover {
    transform: translateY(-5px);
    /* Slight lift effect on hover */
    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
    /* Enhanced shadow on hover */
}

.main-footer {
    background-color: #003366;
    color: white;
    text-align: center;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-footer p {
    margin: 0.5rem 0;
}

.footer-link {
    color: #ebff00;
    text-decoration: none;
    font-size: 0.9rem;
    margin-top: 0.5rem;
}

.footer-link:hover {
    text-decoration: underline;
}

